Adding new iZotope names to the list.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -176,6 +176,7 @@
                     { "name": "Neutron 4 Equalizer" },
                     { "name": "Neutron 4 Exciter" },
                     { "name": "Neutron 4 Sculptor" },
+                    { "name": "Neutron 4 Transient Shaper" },
                     { "name": "Ozone 8 Imager" },
                     { "name": "Ozone 9 Dynamic EQ" },
                     { "name": "Ozone 9 Imager" },
@@ -183,6 +184,7 @@
                     { "name": "Ozone 10 Dynamic EQ" },
                     { "name": "Ozone 10 Equalizer" },
                     { "name": "Ozone 10 Exciter" },
+                    { "name": "Ozone 10 Imager" },
                     { "name": "Ozone 10 Spectral Shaper" },
                     { "name": "Ozone 10 Vintage EQ" },
                     { "name": "Ozone 10 Vintage Tape" },
