Added Ozone 11 and Neutron 5 plugins.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -177,6 +177,12 @@
                     { "name": "Neutron 4 Exciter" },
                     { "name": "Neutron 4 Sculptor" },
                     { "name": "Neutron 4 Transient Shaper" },
+                    { "name": "Neutron 5" },
+                    { "name": "Neutron 5 Compressor" },
+                    { "name": "Neutron 5 Equalizer" },
+                    { "name": "Neutron 5 Exciter" },
+                    { "name": "Neutron 5 Sculptor" },
+                    { "name": "Neutron 5 Transient Shaper" },
                     { "name": "Ozone 8 Imager" },
                     { "name": "Ozone 9 Dynamic EQ" },
                     { "name": "Ozone 9 Imager" },
@@ -188,6 +194,14 @@
                     { "name": "Ozone 10 Spectral Shaper" },
                     { "name": "Ozone 10 Vintage EQ" },
                     { "name": "Ozone 10 Vintage Tape" },
+                    { "name": "Ozone 11" },
+                    { "name": "Ozone 11 Dynamic EQ" },
+                    { "name": "Ozone 11 Equalizer" },
+                    { "name": "Ozone 11 Exciter" },
+                    { "name": "Ozone 11 Imager" },
+                    { "name": "Ozone 11 Spectral Shaper" },
+                    { "name": "Ozone 11 Vintage EQ" },
+                    { "name": "Ozone 11 Vintage Tape" },
                     { "name": "Ozone Imager" },
                     { "name": "Ozone Imager 2" },
                     { "name": "RX 10 Spectral De-noise" },
