Started adding badges and checkboxes for project type. Added new plugins to registry.

--- a/ListVst/appsettings.json
+++ b/ListVst/appsettings.json
@@ -2,7 +2,8 @@
     "processing": {
         "processors": [
             "ListVst.Processing.AbletonLive.Processor,ListVst.Processing.AbletonLive",
-            "ListVst.Processing.StudioOne.Processor,ListVst.Processing.StudioOne"
+            "ListVst.Processing.StudioOne.Processor,ListVst.Processing.StudioOne",
+            "ListVst.Processing.StudioOne.MasteringProjectProcessor,ListVst.Processing.StudioOne"
         ]
     },
     "output": {
@@ -51,6 +52,12 @@
                 ]
             },
             {
+                "manufacturer": "Baby Audio",
+                "names": [
+                    { "name": "Smooth Operator Pro" }
+                ]
+            },
+            {
                 "manufacturer": "Cableguys",
                 "names": [
                     { "name": "Shaperbox 3", "aliases": [ "ShaperBox 3" ] }
@@ -79,7 +86,8 @@
                 "manufacturer": "Eventide",
                 "names": [
                     { "name": "Blackhole" },
-                    { "name": "Shimmer Verb", "aliases": [ "ShimmerVerb" ] }
+                    { "name": "Shimmer Verb", "aliases": [ "ShimmerVerb" ] },
+                    { "name": "Split EQ", "aliases": [ "SplitEQ" ] }
                 ]
             },
             {
@@ -155,6 +163,8 @@
                     { "name": "Lurssen Mastering Console" },
                     { "name": "Metering" },
                     { "name": "Opto Comp" },
+                    { "name": "Stealth Limiter" },
+                    { "name": "Tape Machine 24" },
                     { "name": "Tape Machine 80" },
                     { "name": "Tape Machine 440" },
                     { "name": "VC-670" }
@@ -199,8 +209,10 @@
                     { "name": "Ozone 11 Equalizer" },
                     { "name": "Ozone 11 Exciter" },
                     { "name": "Ozone 11 Imager" },
+                    { "name": "Ozone 11 Maximizer" },
                     { "name": "Ozone 11 Spectral Shaper" },
                     { "name": "Ozone 11 Vintage EQ" },
+                    { "name": "Ozone 11 Vintage Limiter" },
                     { "name": "Ozone 11 Vintage Tape" },
                     { "name": "Ozone Imager" },
                     { "name": "Ozone Imager 2" },
@@ -289,6 +301,7 @@
                 "manufacturer": "Melda",
                 "names": [
                     { "name": "MFreqShifter" },
+                    { "name": "MNotepad" },
                     { "name": "MSpectralPan" }
                 ]
             },
@@ -434,6 +447,7 @@
                     { "name": "Clipper" },
                     { "name": "Drawmer 1973" },
                     { "name": "FET Compressor Mk II" },
+                    { "name": "Flow Mastering Suite" },
                     { "name": "Harmonics Analog Saturation Processor" },
                     { "name": "Model 77 Dual Layer Synth" },
                     { "name": "Modular" },
@@ -454,6 +468,7 @@
                     { "name": "Weiss Deess" },
                     { "name": "Weiss EQ MP" },
                     { "name": "Weiss EQ1" },
+                    { "name": "Weiss Exciter" },
                     { "name": "Weiss MM-1 Mastering Maximizer" },
                     { "name": "Widener" }
                 ]
@@ -496,7 +511,8 @@
             {
                 "manufacturer": "Soundtheory",
                 "names": [
-                    { "name": "Gullfoss" }
+                    { "name": "Gullfoss" },
+                    { "name": "Gullfoss Master" }
                 ]
             },
             {
@@ -523,6 +539,7 @@
                 "manufacturer": "Techivation",
                 "names": [
                     { "name": "M-Clarity" },
+                    { "name": "M-Clarity 2" },
                     { "name": "M-Compressor" },
                     { "name": "T-De-Esser" }
                 ]
@@ -530,10 +547,17 @@
             {
                 "manufacturer": "Tokyo Dawn Labs",
                 "names": [
+                    { "name": "TDR Arbiter" },
                     { "name": "TDR Molot GE" },
                     { "name": "TDR Nova GE" },
                     { "name": "TDR Proximity", "aliases": [ "Proximity", "TDR Labs Proximity" ] },
                     { "name": "TDR Slick EQ GE", "aliases": [ "TDR VOS SlickEQ GE" ] }
+                ]
+            },
+            {
+                "manufacturer": "ToneBoosters",
+                "names": [
+                    { "name": "MBC", "aliases": [ "TB_MBC_v1" ] },
                 ]
             },
             {
@@ -561,14 +585,16 @@
                 "names": [
                     { "name": "UADx 1176LN Rev E Compressor" },
                     { "name": "UADx 176 Compressor" },
+                    { "name": "UADx Ampex ATR-102", "aliases": [ "UADx Ampex ATR-102 Master Tape" ] },
                     { "name": "UADx Fairchild 670 Compressor" },
                     { "name": "UADx LA-2A Tube Compressor" },
-                    { "name": "UADx Manley Massive Passive EQ" },
+                    { "name": "UADx Manley Massive Passive EQ", "aliases": [ "UADx Manley Massive Passive MST" ] },
                     { "name": "UADx Manley Variable Mu Compressor" },
                     { "name": "UADx Manley VOXBOX Channel Strip" },
                     { "name": "UADx Pultec EQP-1A EQ" },
                     { "name": "UADx Pultec HLF-3C EQ" },
-                    { "name": "UADx Pultec MEQ-5 EQ" }
+                    { "name": "UADx Pultec MEQ-5 EQ" },
+                    { "name": "UADx Verve Analog Machines" }
                 ]
             },
             {
